--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-import edu.wpi.first.gradlerio.deploy.roborio.RoboRIO
-
+//import edu.wpi.first.gradlerio.deploy.RoboRIO
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2022.4.1"
+    id "edu.wpi.first.GradleRIO" version "2023.4.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -48,8 +47,11 @@ wpi.java.debugJni = false
 def includeDesktopSupport = false
 
  repositories {
-        mavenCentral()
-        mavenLocal()
+//        mavenCentral()
+//        mavenLocal()
+     maven {
+         url = "https://repo1.maven.org/maven2/"
+     }
         jcenter()
         flatDir {
                 // The directory lib is available as a source for dependencies - we put any JAR files here
