--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
-//import edu.wpi.first.gradlerio.deploy.RoboRIO
+import edu.wpi.first.gradlerio.deploy.roborio.RoboRIO
+
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2023.4.1"
+    id "edu.wpi.first.GradleRIO" version "2022.4.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -47,11 +48,8 @@ wpi.java.debugJni = false
 def includeDesktopSupport = false
 
  repositories {
-//        mavenCentral()
-//        mavenLocal()
-     maven {
-         url = "https://repo1.maven.org/maven2/"
-     }
+        mavenCentral()
+        mavenLocal()
         jcenter()
         flatDir {
                 // The directory lib is available as a source for dependencies - we put any JAR files here
