--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-import edu.wpi.first.gradlerio.deploy.roborio.RoboRIO
-
+//import edu.wpi.first.gradlerio.deploy.RoboRIO
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2022.4.1"
+    id "edu.wpi.first.GradleRIO" version "2023.4.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -47,18 +46,21 @@ wpi.java.debugJni = false
 // Set this to true to enable desktop support.
 def includeDesktopSupport = false
 
- repositories {
-        mavenCentral()
-        mavenLocal()
-        jcenter()
-        flatDir {
-                // The directory lib is available as a source for dependencies - we put any JAR files here
-                // The directory lib will always be one folder "above" a subproject folder - thus the ".."
-                dirs 'lib'
-            }
-	    maven { url 'https://jitpack.io' }
-        maven { url 'https://nexus.otake.pw/repository/maven-public/' }
+repositories {
+//        mavenCentral()
+//        mavenLocal()
+    maven {
+        url = "https://repo1.maven.org/maven2/"
     }
+    jcenter()
+    flatDir {
+        // The directory lib is available as a source for dependencies - we put any JAR files here
+        // The directory lib will always be one folder "above" a subproject folder - thus the ".."
+        dirs 'lib'
+    }
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://nexus.otake.pw/repository/maven-public/' }
+}
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -72,7 +74,7 @@ dependencies {
     implementation 'com.github.flybotix:highfrequencyrobots:' + HFRVER
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
-   // implementation 'org.json:json:+'
+    // implementation 'org.json:json:+'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
